# learning-haskell

./: learning-haskell.cabal
src/: SomeModule.hs
src/LearningHaskell/: StartingOut.hs
testsuite/: AnotherTest.hs  HUnitTest.hs  LearningHUnit.hs  QuickCheckTest.hs  SimpleTest.hs  SomeTest.hs
testsuite/LearningHaskell/: StartingOut.hs  StartingOutTest.hs
