
Name:                learning-haskell
Version:             0.1.0.0
Synopsis:            Project for learning Haskell, will 'Learn You a Haskell for greater good' and 'Real-world Haskell'
License:             BSD3
Author:              Marek Dudek
Maintainer:          marek.dudek@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  hs-source-dirs:      src
  exposed-modules:     SomeModule
  build-depends:       base >= 4

Test-Suite hunit-test
    type:              exitcode-stdio-1.0
    hs-source-dirs:    testsuite
    main-is:           HUnitTest.hs
    build-depends:     base >= 4,
                       test-framework,
                       test-framework-hunit,
                       HUnit
Test-Suite quickcheck-test
    type:              exitcode-stdio-1.0
    hs-source-dirs:    testsuite
    main-is:           QuickCheckTest.hs
    build-depends:     base >= 4,
                       test-framework,
                       test-framework-quickcheck,
                       QuickCheck
