Name:                learning-haskell
Version:             0.1.0.0
Synopsis:            Project for learning Haskell, with 'Learn You a Haskell for great good' and 'Real-world Haskell'
License:             BSD3
Author:              Marek Dudek
Maintainer:          marek.dudek@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  HS-Source-Dirs:      src
  Exposed-Modules:     SomeModule
  Build-Depends:       base >= 4

Test-Suite hunit-test
    Type:              exitcode-stdio-1.0
    HS-Source-Dirs:    testsuite
    Main-Is:           HUnitTest.hs
    Build-Depends:     base >= 4,
                       HUnit,
                       test-framework,
                       test-framework-hunit

Test-Suite quickcheck-test
    Type:              exitcode-stdio-1.0
    HS-Source-Dirs:    testsuite
    Main-Is:           QuickCheckTest.hs
    Build-Depends:     base >= 4,
                       QuickCheck >= 2,
                       test-framework,
                       test-framework-quickcheck2
